--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,19 +12,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-primary border-0 border-bottom" data-bs-theme="light">
+        <nav class="bg-primary border-bottom">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                    <ul class="navbar-nav d-flex flex-row">
-                        <li class="nav-item px-3 border-end"><i class="bi bi-instagram"></i></li>
-                        <li class="nav-item px-3 border-end"><i class="bi bi-twitter-x"></i></li>
-                        <li class="nav-item px-3 border-end"><i class="bi bi-youtube"></i></li>
-                        <li class="nav-item px-3"><i class="bi bi-facebook"></i></li>
-                    </ul>
-                </div>
+                <ul class="navbar-nav d-flex flex-row justify-content-end mb-0 py-2">
+                    <li class="nav-item px-3 border-end"><i class="bi bi-instagram"></i></li>
+                    <li class="nav-item px-3 border-end"><i class="bi bi-twitter-x"></i></li>
+                    <li class="nav-item px-3 border-end"><i class="bi bi-youtube"></i></li>
+                    <li class="nav-item px-3"><i class="bi bi-facebook"></i></li>
+                </ul>
             </div>
         </nav>
     </header>
