--- a/Views/Home/_ScorersPartial.cshtml
+++ b/Views/Home/_ScorersPartial.cshtml
@@ -2,26 +2,22 @@
 @{
     var currentDivision = ViewBag.Division as string;
 }
-<table class="table border-0" style="border-collapse: collapse;">
+<table class="table border-0 fs-5">
     <thead>
-        <tr style="border-bottom: 2px solid #000000;">
-            <th style="border: none;">Player</th>
-            <th style="border: none;">Team</th>
-            <th style="border: none;">Goals</th>
+        <tr style="border-bottom: 2px solid #000;">
+            <th>Player</th>
+            <th class="d-none d-md-table-cell">Team</th>
+            <th>Goals</th>
         </tr>
     </thead>
     <tbody>
-        @{
-            var rank = 1;
-        }
         @foreach (var scorer in Model.Where(s => s.DivisionId == currentDivision).OrderByDescending(s => int.Parse(s.TotalGoals)))
         {
             <tr>
-                <td style="border: none;">@scorer.PlayerFirstName @scorer.PlayerLastName</td>
-                <td style="border: none;">@scorer.TeamName</td>
-                <td style="border: none;">@scorer.TotalGoals</td>
+                <td>@scorer.PlayerFirstName @scorer.PlayerLastName</td>
+                <td class="d-none d-md-table-cell">@scorer.TeamName</td>
+                <td class="text-center">@scorer.TotalGoals</td>
             </tr>
-            rank++;
         }
     </tbody>
 </table>
